--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "ethers": "6.8.0",
-    "mongodb-memory-server": "^8.16.0",
-    "mongodb": "^6.1.0"
+    "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^6.1.0",
+    "mongodb-memory-server": "^8.16.0"
   },
   "devDependencies": {
     "@iden3/eslint-config": "https://github.com/iden3/eslint-config",
+    "@types/express": "^5.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.6.3"
   }
 }
